# XRSS

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.koyeb  README.md  dev.docker-compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
tests/: test_main.py
xrss/: __init__.py  config.py  main.py  utils.py
